@@ -25,6 +25,6 @@ public class Deck {
     }
 
     public Card drawCard() {
-        return cards.remove(0);
+        return cards.removeFirst();
     }
 }
